--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Neumorphism",
+  "name": "Shevanio",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "dev": "gulp",
     "prod": "gulp build"
   },
-  "author": "Long Do",
+  "author": "Shevanio",
   "license": "MIT",
   "dependencies": {
     "browser-sync": "^2.26.12",
