--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -6,37 +6,40 @@
 #   weight: 5
 
 - name: TypeScript
-  weight: 5
+  weight: 3
 
 - name: JavaScript
-  weight: 4
-
-- name: Python
   weight: 2
-
-- name: HTML5
-  weight: 4
-
-- name: CSS3
-  weight: 3
-
-- name: SASS
-  weight: 3
 
 - name: Java
-  weight: 1
-
-- name: Dart
-  weight: 1
-
-- name: Swift
-  weight: 1
-
-- name: Kotlin
-  weight: 1
-
-- name: C++
   weight: 2
 
-- name: Ruby
-  weight: 2
+- name: Python
+  weight: 5
+
+- name: Bash
+  weight: 5
+
+# - name: CSS3
+#   weight: 3
+
+# - name: SASS
+#   weight: 3
+
+# - name: Java
+#   weight: 1
+
+# - name: Dart
+#   weight: 1
+
+# - name: Swift
+#   weight: 1
+
+# - name: Kotlin
+#   weight: 1
+
+# - name: C++
+#   weight: 2
+
+# - name: Ruby
+#   weight: 2
