--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Build and deploy Jekyll site to GitHub Pages
 on:
   push:
     branches:
-      - master  # Set this to your default branch
+      - master  # Ajusta esto a tu rama por defecto
   pull_request:
     branches:
-      - master  # Set this to your default branch
+      - master  # Ajusta esto a tu rama por defecto
 
 jobs:
   build:
@@ -16,27 +16,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'  # O la versión de Ruby que estés usando
+        ruby-version: '2.7'  # Asegúrate de que esta versión coincide con la que utilizas localmente
 
-    - name: Setup Bundler
-      run: |
-        gem install bundler -v '2.3.14'
-        bundler -v
-
-    - name: Cache Bundler
-      uses: actions/cache@v2
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
-
-    - name: Install dependencies
-      run: |
-        bundle config path vendor/bundle
-        bundle install --jobs 4 --retry 3
-
-    - name: Build and test with Jekyll
-      run: bundle exec jekyll build
+    # Resto de tus pasos...
