--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,10 @@ jobs:
     - name: Run Gulp tasks
       run: npx gulp build  # Asegúrate de usar el comando correcto para tus tareas de Gulp
     
+    - name: Install Bundler
+      run: gem install bundler -v '2.3.14'
+
+    - name: Install dependencies
+      run: bundle install
     # Add additional steps for deployment if necessary
 
