--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Me
 # about_me_description: This will be displayed under the title.
-about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from Barcelona, Spain.\n
+about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from Barcelona, Spainasdasdsa.\n
 \n
 👨‍💻 I'm a monitoring technician and systems administrator.\n
 \n
