--- a/_config.yml
+++ b/_config.yml
@@ -48,9 +48,10 @@ about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from
 <br>
 📈 I'm interested in the topic of cryptocurrencies and web3. 
 <br>
-⭐⭐⭐ GOALS<br>
-OSCP / OSWP / eJPT / eCPPTv2 / eWPTXv2 / CPHE / CHEE<br>
-⭐⭐⭐ <br>"
+<br>
+⭐⭐⭐ GOALS ⭐⭐⭐<br>
+OSCP / OSWP / eJPT / eCPPTv2 / eWPTXv2 / CPHE / CHEE <br>
+<br>"
 
 # SKILLS SECTION
 # show_skills_card:
