--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,7 @@ about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from
 <br>
 <br>
 ⭐⭐⭐ GOALS ⭐⭐⭐<br>
-OSCP / OSWP / eJPT / eCPPTv2 / eWPTXv2 / CPHE / CHEE <br>
-<br>"
+OSCP / OSWP / eJPT / eCPPTv2 / eWPTXv2 / CPHE / CHEE <br>"
 
 # SKILLS SECTION
 # show_skills_card:
