--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ show_contact_card: true
 # contact_title: The will be displayed as the title in the Contact section
 contact_title: Contact
 # contact_description: This will be displayed under the title.
-contact_description: asdasdasdasdadasd
+contact_description: Feel free to contact with me in any of my social media.
 
 # GITHUB-METADATA
 # Set this to your forked repository
