--- a/_data/timeline_education.yml
+++ b/_data/timeline_education.yml
@@ -17,13 +17,19 @@
 #     - tag: Rails
 #   timeline_education-side: right
 - title: Linux
-  title-url: https://drive.google.com/file/d/1W9das1YjsVNqoZ_ig4OjudAv6BkhTC1U/view?usp=drive_link
+  title-url: https://drive.google.com/file/d/16_yrw6MD70l5eIJ0-ZVLTm5mImcc0i-w/view?usp=drive_link
   date: 24/06/2023
   subtitle: Environment customization in Linux
+  timeline_education-side: left
+
+- title: Linux
+  title-url: https://drive.google.com/file/d/1g0roZxSiFPMgupLWVqf-YKuvX5hSIuVn/view?usp=drive_link
+  date: 26/03/2021
+  subtitle: Bash/Scripting Linux Advanced
   timeline_education-side: right
 
 - title: Elastic Search
-  title-url: https://drive.google.com/file/d/150YraOtMURf7-HyTNxPfhHv3Go9--tW0/view?usp=drive_link
+  title-url: https://drive.google.com/file/d/123L2UixjF8jXckyuxTLc0I1Da5heB3aW/view?usp=drive_link
   date: 06/02/2021
   subtitle: Analyzing Windows Host Data
   timeline_education-side: left
