--- a/_config.yml
+++ b/_config.yml
@@ -38,19 +38,19 @@ about_me_title: About Me
 # about_me_description: This will be displayed under the title.
 about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from Barcelona, Spain.
 <br>
-👨‍💻 I'm a monitoring technician and systems administrator. 
+👨‍💻 I'm a monitoring technician and systems administrator.
 <br>
-💻 I want to dedicate myself full-time to cybersecurity, performing pentester tasks. 
-<br> 
-👥 I have experience in creating and maintaining professional solutions. 
+💻 I want to dedicate myself full-time to cybersecurity, performing pentester tasks.
 <br>
-🤖 I automate repetitive processes on my computer and work via bash or python scripting. 
+👥 I have experience in creating and maintaining professional solutions.
 <br>
-📈 I'm interested in the topic of cryptocurrencies and web3. 
+🤖 I automate repetitive processes on my computer and work via bash or python scripting mainly.
+<br>
+📈 I'm interested in the topic of Machine Learning and AI.
 <br>
 <br>
 ⭐ GOALS ⭐<br>
-OSCP / OSWP / eJPT / eCPPTv2 / eWPTXv2 / CPHE / CHEE <br>"
+PCAP, Dynatrace, eJPTv2, eCPPTv2 and eWPT <br>"
 
 # SKILLS SECTION
 # show_skills_card:
