Remove innecesary links

--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ about_me_description:  "👋 Hi, my name is David, I'm 26 years old and I'm from
 <br>
 👨‍💻 I'm a monitoring technician and systems administrator.
 <br>
-💻 I want to dedicate myself full-time to cybersecurity, performing pentester tasks.
+💻 I have a strong passion for cybersecurity, but right now, my main interest lies in Machine Learning and AI.
 <br>
 👥 I have experience in creating and maintaining professional solutions.
 <br>
-🤖 I automate repetitive processes on my computer and work via bash or python scripting mainly.
+🤖 I automate repetitive processes on my computer, primarily using bash and Python scripting.
 <br>
-📈 I'm interested in the topic of Machine Learning and AI.
+📈 I'm deeply interested in exploring the fields of Machine Learning and Artificial Intelligence further.
 <br>
 <br>
 ⭐ GOALS ⭐<br>
